feat(review): add review summary api
